# Mobile-Robot-Path-Planning-Using-ViT-RL

./: README.md
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
my_robot_controller/my_robot_controller/: package.xml
my_robot_controller/scripts/: current_goal_pose_subscriber.py  image_vel_subscriber.py  velocity_subscriber.py
project latest/: create goal data.ipynb  data.txt  dummy_goal.npy  ferdowsi cloud.ipynb  goal.csv  goal.ods  image_vel_subscriber.py  map.pgm  map.yaml  near_goal.csv  near_goal.npy  networks.ipynb  notes  replacing notebook.ipynb  run_all_commands.sh  stack data  vit.ipynb
project latest/.ipynb_checkpoints/: vit-checkpoint.ipynb
project latest/jupyter notebooks/: Data Cleaning third backup.ipynb  Data Cleaning third.ipynb  fourth try chain back up.ipynb  fourth try chain.ipynb  plot.ipynb  pytorch_ViT_LSTM.ipynb  pytorch_ViT_MLP_concat_final _rotation_classification.ipynb  pytorch_ViT_MLP_concat_final_batch_size.ipynb  pytorch_ViT_MLP_concat_final_rotation_not_rounded.ipynb  pytorch_ViT_MLP_concat_final_rotation_not_rounded_first_10.ipynb  pytorch_ViT_MLP_concat_final_two_loss.ipynb  pytorch_improved.ipynb  pytorh ViT Patchs.ipynb  third try classification rotation three choice.ipynb  third try modified.ipynb  third try.ipynb
project latest/listener/: CMakeLists.txt  listener.cc
project latest/map/: eight_map.pgm  eight_map.yaml  fifth_map.pgm  fifth_map.yaml  first_map.pgm  first_map.yaml  fourth_map.pgm  fourth_map.yaml  map.pgm  second_map.pgm  second_map.yaml  seventh_map.pgm  seventh_map.yaml  sixth_map.pgm  sixth_map.yaml  (+2 more)
(+45 files in other folders)
